Reorganization of some preferences.