@@ -3,8 +3,6 @@ package icy.preferences;
 import icy.gui.dialog.IdConfirmDialog;
 import icy.gui.frame.progress.ToolTipFrame;
 import icy.gui.util.LookAndFeelUtil;
-import icy.math.MathUtil;
-import icy.system.SystemUtil;
 
 /**
  * @author Stephane
@@ -30,11 +28,6 @@ public class GeneralPreferences
     public static final String ID_GUI_SKIN = "guiSkin";
     public static final String ID_GUI_FONT_SIZE = "guiFontSize";
     public static final String ID_STARTUP_TOOLTIP = "startupTooltip";
-    public static final String ID_MAX_MEMORY = "maxMemory";
-    public static final String ID_STACK_SIZE = "stackSize";
-    public static final String ID_EXTRA_VMPARAMS = "extraVMParams";
-    public static final String ID_OS_EXTRA_VMPARAMS = "osExtraVMParams";
-    public static final String ID_APP_PARAMS = "appParams";
 
     /**
      * id confirm
@@ -54,9 +47,6 @@ public class GeneralPreferences
         prefGeneral = ApplicationPreferences.getPreferences().node(PREF_GENERAL_ID);
         prefToolTips = prefGeneral.node(TOOLTIPS_ID);
         prefConfirms = prefGeneral.node(CONFIRMS_ID);
-
-        // set here settings which need to be initialized
-        setMaxMemoryMB(GeneralPreferences.getMaxMemoryMB());
     }
 
     /**
@@ -92,85 +82,6 @@ public class GeneralPreferences
         return prefConfirms;
     }
 
-    /**
-     * Get max memory (in MB)
-     */
-    public static int getMaxMemoryMB()
-    {
-        int result = prefGeneral.getInt(ID_MAX_MEMORY, -1);
-
-        // no value ?
-        if (result == -1)
-        {
-            final long freeMemory = SystemUtil.getFreeMemory();
-
-            // take system total memory / 2
-            long calculatedMaxMem = SystemUtil.getTotalMemory() / 2;
-            // current available memory is low ?
-            if (calculatedMaxMem > freeMemory)
-                // adjust max memory
-                calculatedMaxMem -= (calculatedMaxMem - freeMemory) / 2;
-
-            // get max memory in MB
-            result = Math.min(getMaxMemoryMBLimit(), (int) (calculatedMaxMem / (1024 * 1024)));
-        }
-
-        // arrange to get multiple of 32 MB
-        return (int) MathUtil.prevMultiple(result, 32);
-    }
-
-    public static int getMaxMemoryMBLimit()
-    {
-        final int result = (int) (SystemUtil.getTotalMemory() / (1024 * 1024));
-
-        // limit maximum value for 32 bits system
-        if (SystemUtil.is32bits() && (result > 1400))
-            return 1400;
-
-        return result;
-    }
-
-    /**
-     * Get stack size (in KB)
-     */
-    public static int getStackSizeKB()
-    {
-        return prefGeneral.getInt(ID_STACK_SIZE, 4096);
-    }
-
-    /**
-     * Get extra JVM parameters string
-     */
-    public static String getExtraVMParams()
-    {
-        return prefGeneral.get(ID_EXTRA_VMPARAMS, "-XX:CompileCommand=exclude,icy/image/IcyBufferedImage.createFrom -XX:MaxPermSize=128M");
-    }
-
-    /**
-     * Get OS specific extra JVM parameters string
-     */
-    public static String getOSExtraVMParams()
-    {
-        final String os = SystemUtil.getOSNameId();
-
-        // we have different default extra VM parameters depending OS
-        if (os.equals(SystemUtil.SYSTEM_WINDOWS))
-            return prefGeneral.get(ID_OS_EXTRA_VMPARAMS + SystemUtil.SYSTEM_WINDOWS, "-Dsun.java2d.d3d=false");
-        if (os.equals(SystemUtil.SYSTEM_MAC_OS))
-            return prefGeneral.get(ID_OS_EXTRA_VMPARAMS + SystemUtil.SYSTEM_MAC_OS, "-Xdock:name=Icy");
-        if (os.equals(SystemUtil.SYSTEM_UNIX))
-            return prefGeneral.get(ID_OS_EXTRA_VMPARAMS + SystemUtil.SYSTEM_UNIX, "");
-
-        return "";
-    }
-
-    /**
-     * Get ICY application parameters string
-     */
-    public static String getAppParams()
-    {
-        return prefGeneral.get(ID_APP_PARAMS, "");
-    }
 
     public static boolean getExitConfirm()
     {
@@ -220,46 +131,6 @@ public class GeneralPreferences
     public static String getGuiSkin()
     {
         return prefGeneral.get(ID_GUI_SKIN, LookAndFeelUtil.getDefaultSkin());
-    }
-
-    /**
-     * Set max memory (in MB)
-     */
-    public static void setMaxMemoryMB(int value)
-    {
-        prefGeneral.putInt(ID_MAX_MEMORY, Math.min(getMaxMemoryMBLimit(), value));
-    }
-
-    /**
-     * Set stack size (in KB)
-     */
-    public static void setStackSizeKB(int value)
-    {
-        prefGeneral.putInt(ID_STACK_SIZE, value);
-    }
-
-    /**
-     * Set extra JVM parameters string
-     */
-    public static void setExtraVMParams(String value)
-    {
-        prefGeneral.put(ID_EXTRA_VMPARAMS, value);
-    }
-
-    /**
-     * Set OS specific extra JVM parameters string
-     */
-    public static void setOSExtraVMParams(String value)
-    {
-        prefGeneral.put(ID_OS_EXTRA_VMPARAMS + SystemUtil.getOSNameId(), value);
-    }
-
-    /**
-     * Set ICY application parameters string
-     */
-    public static void setAppParams(String value)
-    {
-        prefGeneral.put(ID_APP_PARAMS, value);
     }
 
     public static void setExitConfirm(boolean value)
